tests/NormalTests/paczka1/small_fuzzy/39566402.err
Error in line 2: 35XBnI A528 86,8
Error in line 4: iO6CAYfBUle S521 55,6
